--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
   </style>
 </head>
 <body>
-  <canvas id="canvas"></canvas>
 
-  <script src="script.js"></script>
+  
+  <input type="color" id="colorPicker">
+  <canvas id="canvas"></canvas>
+  
+
+  
 </body>
 </html>
+<script src="script.js"></script>
