--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-
+  <input type="file" id="fileInput"/>
   <input type="color" id="colorPicker">
   <canvas id="canvas"></canvas>
   
