--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
   <input type="file" id="fileInput"/>
   <input type="color" id="colorPicker">
+  <button id="pencilButton">Pencil</button>
+  <button id="eraserButton">Eraser</button>
+  <button id="boxButton">Draw Box</button>
   <canvas id="canvas"></canvas>
   
-
   <script src="script.js"></script>
 </body>
 </html>
